Fixed chat / notifications overlap

--- a/src/site/core/components/Chat/style.less
+++ b/src/site/core/components/Chat/style.less
@@ -66,6 +66,6 @@
 	align-items: center;
 	padding: @space-m;
 	color: @error;
-	z-index: 9999;
+	z-index: 99;
 	cursor: not-allowed;
 }
